RESOLVED FIXED315198
Fix WTF::Variant build with GCC 15
https://bugs.webkit.org/show_bug.cgi?id=315198
Summary Fix WTF::Variant build with GCC 15
Loïc Yhuel
Reported 2026-05-20 08:14:51 PDT
Attachments
Loïc Yhuel
Comment 1 2026-05-20 08:32:10 PDT
Loïc Yhuel
Comment 2 2026-05-20 08:39:03 PDT
In file included from /home/src/upstream/webkit/Source/WTF/wtf/StdLibExtras.h:52, from /home/src/upstream/webkit/Source/WTF/wtf/MallocCommon.h:29, from /home/src/upstream/webkit/Source/WTF/wtf/FastMalloc.h:28, from /home/src/upstream/webkit/Source/WTF/config.h:31, from /home/src/upstream/webkit/Source/WTF/wtf/JSONValues.cpp:33: /home/src/upstream/webkit/Source/WTF/wtf/Variant.h: In instantiation of ‘constexpr mpark::detail::base<Ts>::alt_at<I>& mpark::detail::base<Ts>::get_alt() const & [with long unsigned int I = 6; Ts = {std::monostate, bool, double, int, WTF::String, WTF::JSONImpl::Value::ObjectTypeTag, WTF::JSONImpl::Value::ArrayTypeTag}]’: /home/src/upstream/webkit/Source/WTF/wtf/Variant.h:1475:66: error: use of built-in trait ‘__type_pack_element<I, std::monostate, bool, double, int, WTF::String, WTF::JSONImpl::Value::ObjectTypeTag, WTF::JSONImpl::Value::ArrayTypeTag>’ in function signature; use library traits instead 1475 | template <std::size_t I> inline constexpr const alt_at<I> &get_alt() const & noexcept { | ^~~~~~~ /home/src/upstream/webkit/Source/WTF/wtf/Variant.h: In instantiation of ‘constexpr mpark::detail::base<Ts>::alt_at<I>& mpark::detail::base<Ts>::get_alt() const & [with long unsigned int I = 5; Ts = {std::monostate, bool, double, int, WTF::String, WTF::JSONImpl::Value::ObjectTypeTag, WTF::JSONImpl::Value::ArrayTypeTag}]’: /home/src/upstream/webkit/Source/WTF/wtf/Variant.h:1475:66: error: use of built-in trait ‘__type_pack_element<I, std::monostate, bool, double, int, WTF::String, WTF::JSONImpl::Value::ObjectTypeTag, WTF::JSONImpl::Value::ArrayTypeTag>’ in function signature; use library traits instead ... /home/src/upstream/webkit/Source/WTF/wtf/Variant.h: In instantiation of ‘constexpr mpark::detail::base<Ts>::alt_at<I>& mpark::detail::base<Ts>::get_alt() & [with long unsigned int I = 6; Ts = {std::monostate, bool, double, int, WTF::String, WTF::JSONImpl::Value::ObjectTypeTag, WTF::JSONImpl::Value::ArrayTypeTag}]’: /home/src/upstream/webkit/Source/WTF/wtf/Variant.h:1472:60: error: use of built-in trait ‘__type_pack_element<I, std::monostate, bool, double, int, WTF::String, WTF::JSONImpl::Value::ObjectTypeTag, WTF::JSONImpl::Value::ArrayTypeTag>’ in function signature; use library traits instead 1472 | template <std::size_t I> inline constexpr alt_at<I> &get_alt() & noexcept { | ^~~~~~~ ...
EWS
Comment 3 2026-05-21 08:41:45 PDT
Committed 313666@main (3917eb489bf7): <https://commits.webkit.org/313666@main> Reviewed commits have been landed. Closing PR #65293 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-05-21 08:42:14 PDT
Note You need to log in before you can comment on or make changes to this bug.