Fix WTF::Variant build with GCC 15 https://bugs.webkit.org/show_bug.cgi?id=315198

Reviewed by Geoffrey Garen.

The build is broken after 313528@main.

GCC doesn't like the use of __type_pack_element in function signatures,
see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=109625.
So we add an intermediate "struct type_pack_element_impl" in this case.

* Source/WTF/wtf/Variant.h:

Canonical link: https://commits.webkit.org/313666@main